--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -2,7 +2,13 @@
 # https://mochajs.org/#configuring-mocha-nodejs
 # https://github.com/mochajs/mocha/blob/master/example/config/.mocharc.yml
 
-spec: test/specs/**/*.spec.js
+extension:
+  - ts
+
+spec: test/specs/**/*.spec.ts
+
+node-option:
+  - "import=tsx"
 
 bail: true
 recursive: true
