--- a/package.json
+++ b/package.json
@@ -47,18 +47,19 @@
   "devDependencies": {
     "@jsdevtools/eslint-config": "^1.1.4",
     "@jsdevtools/version-bump-prompt": "^6.1.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.19",
     "@types/unist": "^3.0.2",
-    "chai": "^4.2.0",
+    "chai": "^5.1.1",
     "eslint": "^7.17.0",
-    "mocha": "^8.2.1",
+    "mocha": "^10.4.0",
     "npm-check": "^5.9.2",
     "nyc": "^15.1.0",
     "rehype-stringify": "^10.0.0",
     "shx": "^0.3.3",
     "to-vfile": "^8.0.0",
+    "tsx": "^4.10.1",
     "typescript": "^5.4.5",
     "vfile": "^6.0.1"
   },
