--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "rehype-stringify": "^10.0.0",
     "shx": "^0.3.3",
     "to-vfile": "^8.0.0",
-    "tsx": "^4.10.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "vfile": "^6.0.1"
   },
