--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "watch": "tsc --watch",
     "test": "mocha && npm run lint",
     "coverage": "nyc node_modules/mocha/bin/mocha",
-    "upgrade": "npm-check -u && npm audit fix",
+    "upgrade": "NPM_CHECK_INSTALLER=pnpm npm-check -u",
     "bump": "bump --tag --push --all",
     "release": "npm run upgrade && npm run clean && npm run build && npm test && npm run bump"
   },
